# softgl

./: Cargo.toml  output.ppm
src/: main.rs  math.rs  mesh.rs  pixelformat.rs  surface.rs  texture.rs  varying.rs  vertex.rs
src/draw/: clear.rs  mod.rs  triangle.rs
