[package]
name = "softgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
pixels = "0.9.0"
bytemuck = "1.7.3"
winit = "0.26.1"
glam = "0.20.2"
wavefront_obj = "10.0.0"
nanorand = "0.6.1"
image = "0.24.0"
